# demont-engine

./: .gitignore  .lsan-suppressions.txt  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  OPTIX_SETUP.md  README.md  SRGB_ENCODING_FIX.md  WINDOWS_BRINGUP.md  bootstrap_win.bat  bootstrap_win_release.bat  build_win_release.bat  run_win_debug.bat  run_win_release.bat  sunny.toml  test.toml
.github/workflows/: build.yml  linux-sanitizers.yml  prebuild-embree.yml  release.yml
Raytracer Plan/: 01_architecture_principles.html  02_design.html  03_implementation_plan.html  04_console_protocol.html  05_cpp_cheatsheet.html  FOLLOW_UPS.md  TESTING_STRATEGY.md  index.html
assets/gltf/: README.md
assets/hdri/: uniform_gray.hdr
captures/: sw_s2_nogold.ppm
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Editor.cmake  EmbedEditorAssets.cmake  EmbedFile.cmake  EmbedResource.cmake  EmbreeBinary.cmake  EmbreeConfig.cmake  SetupBinaries.cmake  Slang.cmake  patch_enkits.cmake
cmake/embree-prebuild/: CMakeLists.txt
docs/: SRGB_ENCODING_FIX.md  WINDOWS_BRINGUP.md  integration_batch_1_test_guide.md
scripts/: compare_denoisers.py  contact_sheet.py  gen_test_textures.py  probe_swap_bloom.py
shaders/: AuroraComposite.slang  AutoExposure.slang  BloomDown.slang  BloomUp.slang  Clear.slang  CloudsComposite.slang  CloudsRaymarch.slang  DenoiseAtrous.slang  DenoiseFinalize.slang  DenoiseRemod.slang  DenoiseTemporal.slang  EditorOverlay.slang  GodRays.slang  HeightFog.slang  MeshTrace.slang  ParticleComposite.slang  PathTrace.slang  PathTraceCloud.slang  PathTraceMath.slang  PerfOverlay.slang  RestirFinal.slang  RestirReservoir.slang  RestirSpatial.slang  RestirTemporal.slang  Scene.slang  SdfFractals.slang  SdfPrimitives.slang  SigmaShadow.slang  StarsComposite.slang  Tonemap.slang
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ConsoleOverlay.h  ConsoleOverlay.mm  ConsoleOverlay_Stub.cpp  ConsoleOverlay_Win32.cpp  Gamepad.cpp  Gamepad.h  MetalLayerAttach.mm  PerfOverlay.h  PerfOverlay_Cocoa.mm  PerfOverlay_Stub.cpp  PerfOverlay_Win32.cpp  Window.cpp  Window.h  Window_Cocoa.mm  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
src/console/: CMakeLists.txt  Completion.cpp  Completion.h  Console.cpp  Console.h  ConsoleServer.cpp  ConsoleServer.h
src/core/: AssetPath.cpp  AssetPath.h  CMakeLists.txt  Diag.cpp  Diag.h  Log.cpp  Log.h  Tracy.h
src/core/Hardware/: HardwareInfo.cpp  HardwareInfo.h
src/core/Jobs/: JobSystem.cpp  JobSystem.h
src/core/Memory/: FrameArena.cpp  FrameArena.h  MemTag.h  Memory.cpp  Memory.h  PoolAllocator.h
src/destruction/: CMakeLists.txt  VoxelGrid.cpp  VoxelGrid.h  Voxelizer.cpp  Voxelizer.h
src/editor/: CMakeLists.txt  EditorAssets.h  EditorRoutes.cpp  EditorRoutes.h  SceneGraph.cpp  SceneGraph.h
src/effects/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h
src/engine/: CMakeLists.txt  CaptureEncoder.cpp  CaptureEncoder.h  CaptureFormat.h  Engine.cpp  Engine.h  FrameCapture.cpp  FrameCapture.h  HosekSkyModel.h  HosekSkyModelData.h  LensFlare.cpp  LensFlare.h  stb_impl.cpp
src/physics/: CMakeLists.txt  OceanFFT.cpp  OceanFFT.h  Particle.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h  SmokeSPH.cpp  SmokeSPH.h
src/renderer/: AnalyticBvh.cpp  AnalyticBvh.h  Astronomy.cpp  Astronomy.h  BscCatalog.cpp  BscCatalog.h  CMakeLists.txt  Camera.h  EditorOverlay.cpp  EditorOverlay.h  GltfImporter.cpp  GltfImporter.h  HdrImage.cpp  HdrImage.h  LightTree.cpp  LightTree.h  MeshGen.h  MoonTexture.cpp  MoonTexture.h  RestirReservoir.h  TriangleBvh.cpp  TriangleBvh.h  gltf_impl.cpp
src/renderer/Csg/: CsgScene.cpp  CsgScene.h
src/rhi/: CMakeLists.txt  CommandBuffer.h  Device.cpp  Device.h  Handles.h  Resources.h  Swapchain.h  Types.h
src/rhi_metal/: CMakeLists.txt  MetalAttach.mm  MetalDevice.cpp  MetalDevice.h  MetalFXDenoiser.mm  MetalSvgfDenoiser.cpp  MetalSvgfDenoiser.h
src/rhi_software/: CMakeLists.txt  SoftwareDevice.cpp  SoftwareDevice.h  SoftwareTracer.cpp  SoftwareTracer.h  SoftwareVulkanPresent.cpp  SoftwareVulkanPresent.h
src/rhi_vulkan/: CMakeLists.txt  ExternalHandles.h  VulkanDenoiser.cpp  VulkanDenoiser.h  VulkanDevice.cpp  VulkanDevice.h  VulkanNrdLibDenoiser.cpp  VulkanNrdLibDenoiser.h  VulkanOptixDenoiser.cpp  VulkanOptixDenoiser.h
tests/: CMakeLists.txt  cam_bookmarks_test.cpp  capture_format_test.cpp  cvar_roundtrip_test.cpp  cvar_ux_test.cpp  harness_smoke_test.cpp  hdrimage_cdf_test.cpp  imgdiff_test.cpp  missing_golden.cmake  phys_drop_args_test.cpp  pt_core_analytic_bvh_test.cpp  pt_csg_scene_test.cpp  pt_hosek_sky_test.cpp  pt_light_decompose_test.cpp  pt_math_mat_test.cpp  pt_math_quat_test.cpp  pt_math_transforms_test.cpp  pt_math_vec_test.cpp  pt_ocean_fft_test.cpp  pt_physics_test.cpp  pt_renderer_astronomy_test.cpp  pt_renderer_editor_overlay_test.cpp  pt_renderer_light_tree_test.cpp  pt_renderer_triangle_bvh_test.cpp  pt_smoke_sph_test.cpp  scene_serialize_test.cpp  stb_image_impl_for_test.cpp
tests/goldens/scenes/: aurora_off_smoke.cfg  aurora_smoke.cfg  bloom_lensdirt.cfg  brushed_metal.cfg  bsc_night.cfg  bsc_night_clouds.cfg  car_paint.cfg  clouds_godrays.cfg  clouds_raymarched.cfg  cornell_csg.cfg  dof_bokeh.cfg  dof_bokeh_blades.cfg  editor_gizmo_translate.cfg  env_glass_furnace.cfg  height_fog.cfg  light_primitives_mixed.cfg  light_primitives_smoke.cfg  light_tree_200_pts.cfg  lunar_night.cfg  motion_blur_mesh.cfg  motion_blur_mesh_late.cfg  ocean_fft.cfg  ocean_foam.cfg  pbr_textured.cfg  phys_rb_demo.cfg  phys_rb_demo_late.cfg  phys_rb_smoke.cfg  phys_rb_smoke_late.cfg  phys_smoke.cfg  phys_smoke_late.cfg  phys_smoke_off.cfg  procedural_dawn.cfg  procedural_evening.cfg  procedural_noon.cfg  sdf_fractals.cfg  sdf_phase2_procedural.cfg  sdf_smin_row.cfg  shadow_umbra_point.cfg  sky_hosek.cfg  smoke_emitter_basic.cfg  (+7 more)
tools/: CMakeLists.txt
tools/imgdiff/: CMakeLists.txt  ImgDiff.h  main.cpp  stb_impl.cpp
tools/pt_render_one_frame/: CMakeLists.txt  main.cpp
web/: console.css  console.js  index.html
web/editor/: CONTRIBUTING.md  package-lock.json  (+3 more)
(+73 files in other folders)
